# InferenceONNXRT

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: ONNXModel.hpp
include/ONNXHelpers/: ONNXModel.hpp
src/: ONNXModel.cpp
src/ONNXHelpers/: ONNXModel.cpp
src/faceDetectors/: YOLOv8.cpp
